# gr-HighDataRate_Modem

./: CMakeLists.txt  MANIFEST.md  README.md
apps/: CMakeLists.txt
docs/: CMakeLists.txt  README.HighDataRate_Modem  gr-HighDataRate_Modem Design Document (version #1 - DRAFT).odt
examples/: 3048QPSK_PREamble_COMPLEX  HighDataRate_UNcoded_BPSK.grc  HighDataRate_UNcoded_QPSK.grc  QPSK_15Mbps_TRIchain.py  SIMULATION_NO_ LIMESDR_HighDataRate_UNcoded_QPSK.grc
grc/: CMakeLists.txt  HighDataRate_Modem_Chunk_ExtractBPSK.block.yml  HighDataRate_Modem_Chunk_ExtractQPSK.block.yml  HighDataRate_Modem_Decode_RS.block.yml  HighDataRate_Modem_Encode_RS.block.yml  HighDataRate_Modem_Extract_Frame.block.yml  (+6 more)
lib/: CMakeLists.txt  Decode_RS_impl.cc  (+25 more)
python/bindings/: CMakeLists.txt  Chunk_ExtractBPSK_python.cc  Chunk_ExtractQPSK_python.cc  Decode_RS_python.cc  Encode_RS_python.cc  Extract_Frame_python.cc  Frame_Extract_bb_python.cc  Frame_Extract_ff_python.cc  Frame_Extract_python.cc  Resolve_Phase_python.cc  TAG_CHUNKpreamble_python.cc  Tag_FrameASM_bb_python.cc  Tag_FrameASM_ff_python.cc  Tag_FrameASM_python.cc  python_bindings.cc
python/bindings/docstrings/: Chunk_ExtractBPSK_pydoc_template.h  Chunk_ExtractQPSK_pydoc_template.h  Decode_RS_pydoc_template.h  Encode_RS_pydoc_template.h  Extract_Frame_pydoc_template.h  Frame_Extract_bb_pydoc_template.h  Frame_Extract_ff_pydoc_template.h  Frame_Extract_pydoc_template.h  Resolve_Phase_pydoc_template.h  TAG_CHUNKpreamble_pydoc_template.h  Tag_FrameASM_bb_pydoc_template.h  Tag_FrameASM_ff_pydoc_template.h  Tag_FrameASM_pydoc_template.h
(+53 files in other folders)
